@@ -6,6 +6,11 @@ Features
 
 * Allow multiple sandbox module directories to be specified (#1525).
 
+Bug Fixes
+---------
+
+* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).
+
 0.10.0b0 (2015-07-13)
 =====================
 
